--- a/src/Blog/MainBundle/Resources/views/Post/notfound.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/notfound.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div>
-                <h3>Post you are trying to view is not available at the moment!</h3>
+                <h3>{{ "error.post_not_found" | trans }}</h3>
             </div>
         </div>
     </div>
