--- a/src/Blog/MainBundle/Resources/views/Category/delete.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Category/delete.html.twig
@@ -1,12 +1,13 @@
 {% extends "::layout.html.twig" %}
 
 {% block section %}
-    <li>Administration</li>
-    <li>Delete category</li>
+    <li>{{ "common.admin" | trans }}</li>
+    <li>{{ "categories.delete.delete_category" | trans }}</li>
+    <li>{{ category.title }}</li>
 {% endblock %}
 
 {% block page_content %}
-    <h2>Delete category</h2>
+    <h2>{{  "categories.delete.delete_category" | trans }}</h2>
     <div class="form-container">
         <div class="panel panel-danger">
             <div class="panel-heading">
@@ -14,9 +15,9 @@
             </div>
             <div class="panel-body">
                 {% if category.getCountPosts() == 0 %}
-                    You are about to delete this category. Once you delete it, you cannot undo the operation.
+                    {{ "categories.delete.about" | trans }}
                 {% else %}
-                    This category has posts attached to it, it cannot be deleted!
+                    {{ "categories.delete.cant_delete" | trans }}
                 {% endif %}
             </div>
         </div>
@@ -24,19 +25,19 @@
         <div class="row post">
             <div class="col-lg-12">
                 <div>
-                    <h3>Title: {{ category.title | capitalize }}</h3>
+                    <h3>{{ "categories.delete.title" | trans }}: {{ category.title | capitalize }}</h3>
                 </div>
             </div>
         </div>
 
         {% if category.getCountPosts() > 0 %}
-        <h2>Posts in this category</h2>
+        <h2>{{ "categories.delete.posts" | trans }}</h2>
         <div class="bs-example table-responsive">
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Options</th>
+                    <th>{{ "categories.delete.post_title" | trans }}</th>
+                    <th>{{ "categories.delete.post_options" | trans }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -44,8 +45,8 @@
                     <tr>
                         <td>{{ post.title }}</td>
                         <td>
-                            <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">Edit</a>
-                            <a href="{{ url('delete_post', { 'postId': post.id }) }}"class="btn btn-danger btn-sm">Delete</a>
+                            <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">{{ "categories.delete.post_edit" | trans }}</a>
+                            <a href="{{ url('delete_post', { 'postId': post.id }) }}"class="btn btn-danger btn-sm">{{ "categories.delete.post_delete" | trans }}</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -59,9 +60,9 @@
                 <div class="form-group">
                     <div class="col-lg-12">
                         {% if category.getCountPosts() == 0 %}
-                        <button type="submit" id="submit" name="submit" class="btn btn-danger">Delete this category</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-danger">{{ "categories.delete.delete_button" | trans }}</button>
                         {% endif %}
-                        <a href="{{ url('list_categories') }}" class="btn btn-info">Back to category list</a>
+                        <a href="{{ url('list_categories') }}" class="btn btn-info">{{ "categories.delete.back_button" | trans }}</a>
                     </div>
                 </div>
             </fieldset>
