--- a/src/Blog/MainBundle/Resources/views/Category/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Category/listing.html.twig
@@ -1,21 +1,21 @@
 {% extends "::layout.html.twig" %}
 
 {% block section %}
-    <li>Administration</li>
-    <li>List categories</li>
+    <li>{{ "common.admin" | trans }}</li>
+    <li>{{ "categories.list_categories" | trans }}</li>
 {% endblock %}
 
 {% block page_content %}
 <div class="row">
     <div class="col-sm-12">
-        <h2>Categories</h2>
+        <h2>{{ "categories.categories" | trans }}</h2>
         <div class="bs-example table-responsive">
             <table class="table table-striped table-bordered table-hover">
                 <thead>
                 <tr>
-                    <th>Category</th>
-                    <th>Slug</th>
-                    <th>Options</th>
+                    <th>{{ "categories.category" | trans }}</th>
+                    <th>{{ "categories.slug" | trans }}</th>
+                    <th>{{ "categories.options" | trans }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -24,15 +24,15 @@
                     <td>{{ category.title | capitalize }}</td>
                     <td>{{ category.slug }}</td>
                     <td>
-                        <a href="{{ url('edit_category', { 'categoryId': category.id }) }}"class="btn btn-info btn-sm">Edit</a>
-                        <a href="{{ url('delete_category', { 'categoryId': category.id }) }}"class="btn btn-danger btn-sm">Delete</a>
+                        <a href="{{ url('edit_category', { 'categoryId': category.id }) }}"class="btn btn-info btn-sm">{{ "categories.edit_button" | trans }}</a>
+                        <a href="{{ url('delete_category', { 'categoryId': category.id }) }}"class="btn btn-danger btn-sm">{{ "categories.delete_button" | trans }}</a>
                     </td>
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
 
-            <a href="{{ url('new_category') }}"class="btn btn-primary btn-sm">Create new category</a>
+            <a href="{{ url('new_category') }}"class="btn btn-primary btn-sm">{{ "categories.create_button" | trans }}</a>
         </div>
     </div>
 </div>
