--- a/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
@@ -9,13 +9,13 @@
                 </div>
                 <div>
                     <h6>
-                        {{ post.created | date('M d, Y') }}
+                        {{ post.created | date('M') | trans }} {{ post.created | date('d, Y') }}
                         {% if show_category == true %}
-                        - in <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title | capitalize }}</a>
+                        - {{ "listing.in" | trans }} <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title | capitalize }}</a>
                         {% endif %}
                     </h6>
                     <h6>
-                        <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"><fb:comments-count href={{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}></fb:comments-count> comments</a>
+                        <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"><fb:comments-count href={{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}></fb:comments-count> {{ "listing.comments" | trans }}</a>
                     </h6>
                 </div>
                 <div class="content">
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div>
-                <h3>No posts found!</h3>
+                <h3>{{ "listing.posts_not_found" }}</h3>
             </div>
         </div>
     </div>
