--- a/src/Blog/MainBundle/Resources/views/Post/delete.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/delete.html.twig
@@ -2,18 +2,19 @@
 
 {% block section %}
     <li>Administration</li>
-    <li>Delete post</li>
+    <li>{{ "delete.delete_post" | trans }}</li>
+    <li>{{ post.title }}</li>
 {% endblock %}
 
 {% block page_content %}
-    <h2>Delete post</h2>
+    <h2>{{ "delete.title" | trans }}</h2>
     <div class="form-container">
         <div class="panel panel-danger">
             <div class="panel-heading">
-                <h3 class="panel-title">Warning!</h3>
+                <h3 class="panel-title">{{ "delete.warning" | trans }}</h3>
             </div>
             <div class="panel-body">
-                You are about to delete this post. Once you delete it, you cannot undo the operation.
+                {{ "delete.warning_text" | trans }}
             </div>
         </div>
         <div class="row post">
@@ -23,7 +24,7 @@
                 </div>
                 <div>
                     <h6>
-                        {{ post.created | date('M d, Y') }}
+                        {{ post.created | date('M') | trans }} {{ post.created | date('d, Y') }}
                     </h6>
                 </div>
                 <div class="content">
@@ -35,7 +36,7 @@
             <fieldset>
                 <div class="form-group">
                     <div class="col-lg-12">
-                        <button type="submit" id="submit" name="submit" class="btn btn-danger delete-post">Delete this post</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-danger delete-post">{{ "delete.delete_button" | trans }}</button>
                     </div>
                 </div>
             </fieldset>
