--- a/src/Blog/MainBundle/Resources/views/Post/new.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/new.html.twig
@@ -1,23 +1,23 @@
 {% extends "::layout.html.twig" %}
 
 {% block section %}
-    <li>Administration</li>
-    <li>New post</li>
+    <li>{{ "common.admin" | trans }}</li>
+    <li>{{ "new.new_post" | trans }}</li>
 {% endblock %}
 
 {% block page_content %}
-    <h2>New post</h2>
+    <h2>{{ "new.new_post" | trans }}</h2>
     <div class="form-container">
         <form action="{{ path("new_post") }}" method="post" class="bs-example form-horizontal">
             <fieldset>
                 <div class="form-group">
-                    <label for="title" class="col-lg-2 control-label">Title</label>
+                    <label for="title" class="col-lg-2 control-label">{{ "new.title" | trans }}</label>
                     <div class="col-lg-10">
-                        <input type="text" class="form-control" id="title" name="title" required="required" placeholder="Enter post's title">
+                        <input type="text" class="form-control" id="title" name="title" required="required">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="category" class="col-lg-2 control-label">Category</label>
+                    <label for="category" class="col-lg-2 control-label">{{ "new.category" | trans }}</label>
                     <div class="col-lg-10">
                         <select id="category" class="form-control" name="category">
                             {% for category in categories %}
@@ -27,23 +27,23 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="content" class="col-lg-2 control-label">Content</label>
+                    <label for="content" class="col-lg-2 control-label">{{ "new.content" | trans }}</label>
                     <div class="col-lg-10">
                         <textarea id="content" name="content" class="ckeditor"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="status" class="col-lg-2 control-label">Status</label>
+                    <label for="status" class="col-lg-2 control-label">{{ "new.status" | trans }}</label>
                     <div class="col-lg-10">
                         <select id="status" class="form-control" name="status">
-                            <option value="1">Published</option>
-                            <option value="2">Not published</option>
+                            <option value="1">{{ "new.status_published" | trans }}</option>
+                            <option value="2">{{ "new.status_not_published" | trans }}</option>
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Save Post</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-primary">{{ "new.save_button" | trans }}</button>
                     </div>
                 </div>
             </fieldset>
