--- a/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
@@ -1,29 +1,29 @@
 {% extends "::layout.html.twig" %}
 
 {% block section %}
-    <li>Administration</li>
-    <li>Unpublished posts</li>
+    <li>{{ "common.admin" | trans }}</li>
+    <li>{{ "unpublished.unpublished_posts" | trans }}</li>
 {% endblock %}
 
 {% block page_content %}
     <div class="row">
         <div class="col-sm-12">
-            <h2>Unpublished posts</h2>
+            <h2>{{ "unpublished.unpublished_posts" | trans }}</h2>
             <div class="bs-example table-responsive">
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th>Title and Date</th>
-                        <th>Options</th>
+                        <th>{{ "unpublished.title_and_date" | trans }}</th>
+                        <th>{{ "unpublished.options" | trans }}</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for post in pagination %}
                         <tr>
-                            <td>{{ post.title }}<br/>{{ post.created | date('M d, Y') }}</td>
+                            <td>{{ post.title }}<br/>{{ post.created | date('M') | trans }} {{ post.created | date('d, Y') }}</td>
                             <td class="admin-options">
-                                <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">Edit</a>
-                                <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"class="btn btn-primary btn-sm">View</a>
+                                <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">{{ "unpublished.edit" | trans }}</a>
+                                <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"class="btn btn-primary btn-sm">{{ "unpublished.view" | trans }}</a>
                             </td>
                         </tr>
                     {% endfor %}
