Fixed a pagination bug

--- a/src/Blog/MainBundle/Resources/views/Common/pagination.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/pagination.html.twig
@@ -22,7 +22,7 @@
 <div>
     <ul class="pagination">
         {% if previous is defined %}
-            <li><a href="{{ path(route, query|merge({(pageParameterName): previous})) }}"{{ "listing.previous_page" | trans }}</a></li>
+            <li><a href="{{ path(route, query|merge({(pageParameterName): previous})) }}">{{ "listing.previous_page" | trans }}</a></li>
         {% endif %}
 
         {% for page in pagesInRange %}
