--- a/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
@@ -9,7 +9,8 @@
                 </div>
                 <div>
                     <h6>
-                        {{ post.created | date('M') | trans }} {{ post.created | date('d, Y') }}
+                        {% set post_created_key = "months." ~ (post.created | date('M') ) %}
+                        {{ post_created_key | trans }} {{ post.created | date('j, Y') }}
                         {% if show_category == true %}
                         - {{ "listing.in" | trans }} <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title | capitalize }}</a>
                         {% endif %}
