Added BlogIt link

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -132,6 +132,7 @@
             <div class="row">
                 <div class="col-md-6 footer-column">
                     <p>Copyright &copy; {{ "now"|date("Y") }}, {{ blog_copyright }}</p>
+                    <p>Powered by <a href="https://github.com/artur-gajewski/blogit">BlogIt - Open Source Blog Engine</a></p>
                 </div>
                 <div class="col-md-6 footer-column text-right">
                     <p>{{ blog_email }}</p>
