Added AddThis plugin

--- a/src/Blog/MainBundle/Resources/public/css/blog.css
+++ b/src/Blog/MainBundle/Resources/public/css/blog.css
@@ -61,6 +61,11 @@ a:hover {
     margin-top: 15px;
 }
 
+.share-group {
+    margin-top: 30px;
+    padding-left: 13px;
+}
+
 #footer {
     height: 70px;
 }
