--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -102,24 +102,39 @@
                 {% endfor %}
             </div>
 
-
-                <h2>{{ "navigation.admin" | trans }}</h2>
-                <div class="list-group">
-                    {% if app.user and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                        {% if categories | length > 0 %}
-                            <a class="list-group-item" href="{{ url('new_post') }}">&raquo; {{ "side.new_post" | trans }}</a>
-                            <a class="list-group-item" href="{{ url('list_unpublished_posts') }}">
-                                &raquo; {{ "side.unpublished" | trans }}
-                                <span class="badge">{{ unpublished | length }}</span>
-                            </a>
-                        {% endif %}
-                        <a class="list-group-item" href="{{ url('list_categories') }}">&raquo; {{ "side.category_admin" | trans }}</a>
-                        <a class="list-group-item" href="{{ url('fos_user_security_logout') }}">&raquo; {{ "side.logout" | trans }}</a>
-                    {% else %}
-                        <a class="list-group-item" href="{{ url('fos_user_security_login') }}">&raquo; {{ "side.login" | trans }}</a>
+            <h2>{{ "navigation.admin" | trans }}</h2>
+            <div class="list-group">
+                {% if app.user and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    {% if categories | length > 0 %}
+                        <a class="list-group-item" href="{{ url('new_post') }}">&raquo; {{ "side.new_post" | trans }}</a>
+                        <a class="list-group-item" href="{{ url('list_unpublished_posts') }}">
+                            &raquo; {{ "side.unpublished" | trans }}
+                            <span class="badge">{{ unpublished | length }}</span>
+                        </a>
                     {% endif %}
-                </div>
+                    <a class="list-group-item" href="{{ url('list_categories') }}">&raquo; {{ "side.category_admin" | trans }}</a>
+                    <a class="list-group-item" href="{{ url('fos_user_security_logout') }}">&raquo; {{ "side.logout" | trans }}</a>
+                {% else %}
+                    <a class="list-group-item" href="{{ url('fos_user_security_login') }}">&raquo; {{ "side.login" | trans }}</a>
+                {% endif %}
+            </div>
 
+            <h2>{{ "navigation.share" | trans }}</h2>
+            <div class="share-group">
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style"
+                     addthis:url="{{ path('homepage') }}"
+                     addthis:title="{{ blog_title }}">
+                    <a class="addthis_button_preferred_1"></a>
+                    <a class="addthis_button_preferred_2"></a>
+                    <a class="addthis_button_preferred_3"></a>
+                    <a class="addthis_button_preferred_4"></a>
+                    <a class="addthis_button_compact"></a>
+                </div>
+                <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50b4cc8c4504e731"></script>
+                <!-- AddThis Button END -->
+            </div>
         </div>
     </div>
 </div>
