Fixed url issue

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -123,7 +123,7 @@
             <div class="share-group">
                 <!-- AddThis Button BEGIN -->
                 <div class="addthis_toolbox addthis_default_style addthis_32x32_style"
-                     addthis:url="{{ path('homepage') }}"
+                     addthis:url="{{ url('homepage') }}"
                      addthis:title="{{ blog_title }}">
                     <a class="addthis_button_preferred_1"></a>
                     <a class="addthis_button_preferred_2"></a>
