--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -31,11 +31,13 @@
 
             <div class="content">
                 {{ post.content | raw }}
+                <div class="fb-like" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
             </div>
         </div>
     </div>
     <div class="row facebook-comments">
         <div class="col-lg-12">
+            <div class="fb-like" data-href="https://developers.facebook.comasdasdasd" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
             <div class="fb-comments" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-send="false" data-num-posts="5" mobile="false"></div>
             <style>
                 .fb-comments, .fb-comments iframe[style], .fb-like-box, .fb-like-box iframe[style] {
