--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -19,6 +19,7 @@
 </head>
 <body>
 
+{% if facebook_like_button or facebook_commenting %}
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -28,6 +29,7 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 </script>
+{% endif %}
 
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
