--- a/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
@@ -33,7 +33,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div>
-                <h3>{{ "listing.posts_not_found" }}</h3>
+                <h3>{{ "listing.posts_not_found" | trans }}</h3>
             </div>
         </div>
     </div>
