--- a/src/Blog/AdminBundle/Resources/views/Link/listing.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Link/listing.html.twig
@@ -21,7 +21,7 @@
                 <tbody>
                 {% for link in links %}
                 <tr>
-                    <td>{{ link.title | capitalize }}</td>
+                    <td>{{ link.title }}</td>
                     <td>{{ link.url }}</td>
                     <td>
                         <a href="{{ url('edit_link', { 'linkId': link.id }) }}"class="btn btn-info btn-sm">{{ "links.edit_button" | trans }}</a>
