added code higlight

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/css/blog.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/theme.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/css/datepicker.css') }}">
+
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?&skin=sons-of-obsidian"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="{{ asset('js/html5shiv.js') }}"></script>
@@ -181,6 +183,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="{{ asset('bundles/blogmain/js/bootstrap.js') }}"></script>
 <script src="{{ asset('bundles/blogmain/js/bootstrap-datepicker.js') }}"></script>
+
 
 {% block javascripts %}{% endblock %}
 
