--- a/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
@@ -26,7 +26,7 @@
                 <div class="content">
                     {{ post.content | raw }}
                     {% if facebook_like_button %}
-                        <div class="fb-like" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+                        <div class="fb-like" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                     {% endif %}
                 </div>
             </div>
