--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -5,6 +5,8 @@
     <li>{{ post.title }}</li>
 {% endblock %}
 
+{% block page_title %}{{ post.title }} | {% endblock %}
+
 {% block page_content %}
 
     <div class="row post">
