--- a/src/Blog/AdminBundle/Resources/views/Category/delete.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Category/delete.html.twig
@@ -25,7 +25,7 @@
         <div class="row post">
             <div class="col-lg-12">
                 <div>
-                    <h3>{{ "categories.delete.title" | trans }}: {{ category.title | capitalize }}</h3>
+                    <h3>{{ "categories.delete.title" | trans }}: {{ category.title }}</h3>
                 </div>
             </div>
         </div>
