--- a/src/Blog/AdminBundle/Resources/views/Link/delete.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Link/delete.html.twig
@@ -21,7 +21,7 @@
         <div class="row post">
             <div class="col-lg-12">
                 <div>
-                    <h3>{{ "links.delete.title" | trans }}: {{ link.title | capitalize }}</h3>
+                    <h3>{{ "links.delete.title" | trans }}: {{ link.title }}</h3>
                     <h3>{{ "links.delete.url" | trans }}: {{ link.url }}</h3>
                 </div>
             </div>
