--- a/src/Blog/AdminBundle/Resources/views/Post/edit.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Post/edit.html.twig
@@ -22,7 +22,7 @@
                     <div class="col-lg-10">
                         <select id="category" class="form-control" name="category">
                             {% for category in categories %}
-                                <option value="{{ category.id }}" {% if category.id == post.category.id %}SELECTED{% endif %}>{{ category.title | capitalize }}</option>
+                                <option value="{{ category.id }}" {% if category.id == post.category.id %}SELECTED{% endif %}>{{ category.title }}</option>
                             {% endfor %}
                         </select>
                     </div>
