--- a/src/Blog/AdminBundle/Resources/views/Post/new.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Post/new.html.twig
@@ -21,7 +21,7 @@
                     <div class="col-lg-10">
                         <select id="category" class="form-control" name="category">
                             {% for category in categories %}
-                                <option value="{{ category.id }}">{{ category.title | capitalize }}</option>
+                                <option value="{{ category.id }}">{{ category.title }}</option>
                             {% endfor %}
                         </select>
                     </div>
