--- a/src/Blog/MainBundle/Resources/views/Category/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Category/listing.html.twig
@@ -21,7 +21,7 @@
                 <tbody>
                 {% for category in categories %}
                 <tr>
-                    <td>{{ category.title | capitalize }}</td>
+                    <td>{{ category.title }}</td>
                     <td>{{ category.slug }}</td>
                     <td>
                         <a href="{{ url('edit_category', { 'categoryId': category.id }) }}"class="btn btn-info btn-sm">{{ "categories.edit_button" | trans }}</a>
