--- a/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Common/listing.html.twig
@@ -12,7 +12,7 @@
                         {% set post_created_key = "months." ~ (post.created | date('M') ) %}
                         {{ post_created_key | trans }} {{ post.created | date('j, Y') }}
                         {% if show_category == true %}
-                        - {{ "listing.in" | trans }} <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title | capitalize }}</a>
+                        - {{ "listing.in" | trans }} <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title }}</a>
                         {% endif %}
                     </h6>
                     {% if facebook_commenting %}
